tests/ui/traits/non_lifetime_binders/supertrait-dyn-compatibility.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/supertrait-dyn-compatibility.rs:1:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/supertrait-dyn-compatibility.rs:19:12
   |
LL |     let x: &dyn Foo = &();
   |            ^^^^^^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/supertrait-dyn-compatibility.rs:4:12
   |
LL | trait Foo: for<T> Bar<T> {}
   |       ---  ^^^^^^^^^^^^^ ...because where clause cannot reference non-lifetime `for<...>` variables
   |       |
   |       this trait is not dyn compatible...
   = help: only type `()` implements `Foo`; consider using it directly instead.

error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/supertrait-dyn-compatibility.rs:21:5
   |
LL |     needs_bar(x);
   |     ^^^^^^^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/supertrait-dyn-compatibility.rs:4:12
   |
LL | trait Foo: for<T> Bar<T> {}
   |       ---  ^^^^^^^^^^^^^ ...because where clause cannot reference non-lifetime `for<...>` variables
   |       |
   |       this trait is not dyn compatible...
   = help: only type `()` implements `Foo`; consider using it directly instead.

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0038`.
